--- a/package.json
+++ b/package.json
@@ -28,6 +28,9 @@
     "zone.js": "0.5.10"
   },
   "devDependencies": {
+    "babel-core": "^6.4.5",
+    "babel-loader": "^6.2.1",
+    "babel-preset-es2015": "^6.3.13",
     "concurrently": "^1.0.0",
     "html-webpack-plugin": "^2.7.2",
     "live-server": "^0.9.0",
